--- a/README.org
+++ b/README.org
@@ -1,26 +1,21 @@
 * EAZY-Project - Interactive Project Generator & Manager
 
-This is basically a fork from cl-project@fukamachi, but I'm gonna go much further...
+This is basically a fork from cl-project@fukamachi.
+I use it for myself.
 
 Usage:
 #+BEGIN_SRC 
-(eazy-project:create)
+(ql:quickload :eazy-project)
+;; no command is required, all you need is to load the library
+
+;; or, if the library is loaded in the image, try
+(eazy-project:launch-menu)
+
+;; or its synonim :
+eazy-project:!
 #+END_SRC
 
-* Basic features
-
-The main contributions in cl-project@fukamachi compared to the other
-project-generation libraries were:
-
-+ Templating based on CL-EMB 
-+ Unit testing as default
-
-Additional changes includes:
-
-+ interactive project generation
-+ interactive dependency management
-+ unit-testing library can be customizable
-+ automatic initialization with a version control system (currently git)
+And follow the instruction that appears in the debugger.
 
 To load this library, clone the repo into the quicklisp's local-project
 directory and run
