--- a/README.org
+++ b/README.org
@@ -8,6 +8,19 @@ It is focused on the interactive features.
 
 Now quicklisp loadable: =(ql:quickload :eazy-project)=.
 
+* Launching the menu from the shell
+
+In order to use the library from the command line you have to install it from `ros install`.
+
+```
+$ ros install eazy-project
+$ eazy-project
+```
+
+Make sure `~/.roswell/bin` is in the `PATH`. otherwise replace the second line with `ros exec eazy-project`
+
+* Usage on REPL
+
 Usage:
 #+BEGIN_SRC lisp
 ;; Add this statement in your .sbclrc / .ccl-init.lisp
